--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tabler/icons-react": "^3.19.0",
     "class-variance-authority": "^0.7.0",
@@ -19,6 +20,7 @@
     "lucide-react": "^0.447.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.14",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-lottie": "^1.2.10",
