--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-lottie": "^1.2.4",
     "react-spinners": "^0.14.1",
     "sonner": "^1.5.0",
